<resources>
    <string name="app_name">Epic-Thrillon</string>
    <string name="tutorial_button">Get Started</string>
    <string name="register_button">Register </string>
    <string name="login_button">Login</string>
    <string name="register_text">Register Now</string>
    <string name="first_name_signup">First Name</string>
    <string name="last_name_signup">Last Name</string>
    <string name="mobile_number_signup">Mobile Number</string>
    <string name="password_signup">Password</string>
    <string name="confirm_password_signup">Confirm Password</string>
    <string name="t_and_c">By Proceeding you confirmed term and condition</string>
    <string name="register">Register</string>
    <string name="already_register_text">Already Register? Login</string>
    <string name="facebook_app_id">245423285991094</string>
    <string name="fb_login_protocol_scheme">fb245423285991094</string>
    <string name="email_signup">Mobile No</string>
    <string name="title_activity_home__page">Home_Page</string>
    <string name="banner_ad_unit_id">ca-app-pub-4689037977247733/3053805923</string>

    <string name="video_ad_unit_id">ca-app-pub-4689037977247733/3010408042</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Near By</item>
        <item>Destination</item>
        <item>Wishlist</item>
        <item>My Activity</item>
        <item>Notification</item>

    </string-array>
    <string name="action_add_favourite">Add to Favourites</string>
    <string name="action_play_next">Play Next</string>
    <string name="backdrop_title">LOVE MUSIC</string>
    <string name="backdrop_subtitle">This season top 20 albums</string>
    <string name="title_activity_maps">Map</string>
    <string name="ad_unit_id">ca-app-pub-4689037977247733/6322079041</string>
    <string name="title_activity_check_availability">CheckAvailability</string>

</resources>
