<?xml version="1.0" encoding="utf-8"?>



<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="20dp"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.example.rushi.epic_thrillon.Register">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/register_text"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="11"
                android:layout_marginBottom="20dp"
                android:gravity="center_horizontal"
                android:text="@string/register_text"
                android:textSize="20sp"
                android:visibility="visible" />

            <EditText
                android:id="@+id/first_name_edittext"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="11"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:ems="10"
                android:hint="@string/first_name_signup"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/last_name_edittext"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="11"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:ems="10"
                android:hint="@string/last_name_signup"
                android:inputType="textPersonName" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="10"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:hint="@string/email_signup"
                android:inputType="textEmailAddress"
                android:ems="10"/>

            <EditText
                android:id="@+id/mobile_number_edittext"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="10"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:ems="10"
                android:hint="@string/mobile_number_signup"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/password_edittext"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="10"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:ems="10"
                android:hint="@string/password_signup"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/confirm_password_edittext"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="10"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:ems="10"
                android:hint="@string/confirm_password_signup"
                android:inputType="textPersonName" />



            <CheckedTextView
                android:id="@+id/checkedTextView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="10"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/t_and_c" />

            <Button
                android:id="@+id/register_button"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="10"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="0dp"
                android:text="@string/register" />


            <TextView
                android:id="@+id/alredy_register"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="20dp"
                android:layout_weight="10"
                android:text="@string/already_register_text" />



        </LinearLayout>
    </ScrollView>


</LinearLayout>
